# rtype

./: .gitignore  README.md
R-TypeClient/: CMakeLists.txt
R-TypeClient/R-TypeClient/: CMakeLists.txt
R-TypeClient/R-TypeClient/SFML/lib/: sfml-audio.lib  sfml-main.lib  sfml-network.exp  sfml-system.lib  sfml-window.exp  sfml-window.lib
R-TypeClient/R-TypeClient/SFMLDebug/lib/: sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-network-d.exp  sfml-system-d.exp  sfml-system-d.lib  sfml-window-d.exp  sfml-window-d.lib
R-TypeClient/R-TypeClient/include/: AnimationComponent.h  Component.h  CountComponent.h  Entity.h  ITCPSocket.h  IUDPSocket.h  Network.h  NotificationComponent.h  PropertyComponent.h  Protocol.h  Ressources.h  ScrollComponent.h  SelectionComponent.h  SfmlTcpSocket.h  SfmlUdpSocket.h  SoundManager.h  System.h  SystemController.h  SystemGUI.h  SystemManager.h  TextComponent.h
R-TypeClient/R-TypeClient/src/: AnimationComponent.cpp  CountComponent.cpp  Entity.cpp  Network.cpp  NotificationComponent.cpp  PropertyComponent.cpp  R-TypeClient.cpp  Ressources.cpp  ScrollComponent.cpp  SelectionComponent.cpp  SfmlTcpSocket.cpp  SfmlUdpSocket.cpp  SoundManager.cpp  System.cpp  SystemController.cpp  SystemGUI.cpp  SystemManager.cpp  TextComponent.cpp  stdafx.cpp
R-TypeClient/SFML/lib/: sfml-audio.exp  sfml-graphics.exp  sfml-graphics.lib  sfml-system.exp
R-TypeRessource/: R-TypeRessource.sln
R-TypeRessource/MonsterGeneric/: Hitbox.h  IMonster.h  Monster.cpp  MonsterGeneric.vcxproj  MonsterGeneric.vcxproj.filters  Protocol.h  stdafx.cpp
R-TypeRessource/R-TypeRessource/: R-TypeRessource.cpp  R-TypeRessource.vcxproj  R-TypeRessource.vcxproj.filters  stdafx.cpp
R-TypeRessource/StarshipBlue/: Monster.cpp  StarshipBlue.vcxproj
R-TypeRessource/StarshipGreen/: Monster.cpp  StarshipGreen.vcxproj
R-TypeRessource/StarshipRed/: Monster.cpp  StarshipRed.vcxproj
R-TypeRessource/StarshipYellow/: Monster.cpp  StarshipYellow.vcxproj
R-TypeRessource/bigbluemissile/: Monster.cpp  bigbluemissile.vcxproj
R-TypeRessource/bluemissile/: Monster.cpp  bluemissile.vcxproj  missile.vcxproj.filters
R-TypeRessource/butterfly/: Monster.cpp  butterfly.vcxproj
R-TypeRessource/greenboss/: Monster.cpp  greenboss.vcxproj
R-TypeRessource/kamikaze/: Monster.cpp  kamikaze.vcxproj  stdafx.cpp
R-TypeRessource/missile/: Monster.cpp  missile.vcxproj  stdafx.cpp
R-TypeRessource/starship1/: Monster.cpp  starship1.vcxproj
R-TypeServer/: rtypeserver.sln
R-TypeServer/rtypeserver/: Client.cpp  Client.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameRoom.cpp  GameRoom.h  GameRoomManager.cpp  GameRoomManager.h  ITCPSocket.h  IUDPSocket.h  PhysicComponent.cpp  PhysicComponent.h  PhysicSystem.cpp  PhysicSystem.h  Ressource.cpp  Ressource.h  System.cpp  System.h  TCPServer.cpp  TCPServer.h  TestNetwork.vcxproj  TestNetwork.vcxproj.filters  UDPServer.cpp  UDPServer.h  rtypeserver.cpp  rtypeserver.vcxproj  rtypeserver.vcxproj.filters  stdafx.cpp
TestNetwork/: TestNetwork.sln
TestNetwork/TestNetwork/: ATCPSocket.h  AUDPSocket.h  Client.cpp  Client.h  Game.cpp  Game.h  GameRoom.cpp  GameRoom.h  GameRoomManager.cpp  GameRoomManager.h  Protocol.h  TCPServer.h  Test.h  TestNetwork.cpp  UDPServer.h
doc/: Class Diagram R-Type Client.asta  Class Diagram R-Type Serveur.asta  rfc.txt
